--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: Unna Engenharia e Construção
 email: unna@unna.eng.br
-baseurl: ""
-url: https://www.unna.eng.br
+baseurl: "unna"
+url: https://engleite.github.io/
 description: "Nosso objetivo é atuar no setor da construção civil, proporcionando aos clientes soluções sustentáveis, viabilizando prazos, custos e qualidade. Valorizamos o respeito nos relacionamentos profissionais, o desenvolvimento científico e a qualidade que deve ser oferecida aos nossos clientes. "
 lang: pt-br
 author: Emerson Leite
