--- a/_data/version.yml
+++ b/_data/version.yml
@@ -1,4 +1,4 @@
 version-list:
   - version: 1.0.0
     date: 08/05/2019
-    description: "Versão inicial"
+    description: "Versão inicial do site da Unna"
