--- a/_data/version.yml
+++ b/_data/version.yml
@@ -1,10 +1,15 @@
   - version: 1.0.0
     date: 2019-05-08
     description: "Versão inicial do site da Unna"
-    lastest: true
+    lastest: false
 
   - version: 1.0.1
     date: 2019-05-08
     description: "Versão 0.1 da versão inicial do site da Unna"
     lastest: false
+
+  - version: 1000
+    date: 2019-05-08
+    description: "Versão 0.1 da versão inicial do site da Unna"
+    lastest: true
 
