--- a/_config.yml
+++ b/_config.yml
@@ -1,89 +1,65 @@
-# Site settings
 title: Unna Engenharia e Construção
 email: unna@unna.eng.br
-url: https://unna.eng.br
-baseurl: "" 
-description: "Nosso objetivo é atuar no setor da construção civil, proporcionando aos clientes soluções sustentáveis, viabilizando prazos, custos e qualidade. Valorizamos o respeito nos relacionamentos profissionais, o desenvolvimento científico e a qualidade que deve ser oferecida aos nossos clientes. "
+url: 'https://unna.eng.br'
+baseurl: ''
+description: >-
+  Nosso objetivo é atuar no setor da construção civil, proporcionando aos
+  clientes soluções sustentáveis, viabilizando prazos, custos e qualidade.
+  Valorizamos o respeito nos relacionamentos profissionais, o desenvolvimento
+  científico e a qualidade que deve ser oferecida aos nossos clientes. 
 lang: pt-br
 author: Emerson Leite
-
+show-author: true
+show-version: true
 posts:
-  date_format: "%b %-d, %Y"
-
-
+  date_format: '%b %-d, %Y'
 background:
-  intro-bkg: "/img/building-wallpapers-28464-2708651.jpg"
-
-# Color settings (hex-codes without the leading hash-tag)
+  intro-bkg: /img/building-wallpapers-28464-2708651.jpg
 color:
-  primary-dark: '#fff'  
+  primary-dark: '#fff'
   font-color: '#000'
   font-btn-color: '#fff'
-  btn-bkg: '#059c00'        # cor do botão
-  # links: '#000'
-  about-bkg: '#fff'         # cor da seção about
-  footer-bkg: '#000'        # cor da seção footer
-  download-bkg: '#000'      # cor da seção download
-
-font-nav-color: '#059c00'    # cor da fonte da navegação
-font-intro-color: '#000'     # cor da fonte da introdução
-
-#navbar:
-  #min-width: 70px; 
-  
-
-# Font Family
+  btn-bkg: '#059c00'
+  about-bkg: '#fff'
+  footer-bkg: '#000'
+  download-bkg: '#000'
+font-nav-color: '#059c00'
+font-intro-color: '#000'
 fontFamily:
-  font-family: 'Arial'
-
-# Content settings
+  font-family: Arial
 content-set:
   download:
     title: Sobre nós
-    body-set: "Nosso time é composto por profissionais com competências variadas. Somos especialistas em gestão de obras, execução de orçamentos, planejamento de empreendimentos e elaboração e gestão de projetos. Conheça nosssa equipe!" 
+    body-set: >-
+      Nosso time é composto por profissionais com competências variadas. Somos
+      especialistas em gestão de obras, execução de orçamentos, planejamento de
+      empreendimentos e elaboração e gestão de projetos. Conheça nosssa equipe!
   contact:
     title: Contato
-    body-set: "Entre em contato conosco através de nossas redes sociais. Estaremos prontos para atendê-lo da melhor maneira!"
+    body-set: >-
+      Entre em contato conosco através de nossas redes sociais. Estaremos
+      prontos para atendê-lo da melhor maneira!
   map:
     title: Onde estamos
-    body-set:
-
-
-# Footer settings
-
+    body-set: null
 footer: Unna Engenharia e Construção
-
-# Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: facebook
-    url: https://www.facebook.com/unnaengenharia/
+    url: 'https://www.facebook.com/unnaengenharia/'
   - title: linkedin
-    url: https://www.linkedin.com/company/unnaengenharia/?viewAsMember=true
+    url: 'https://www.linkedin.com/company/unnaengenharia/?viewAsMember=true'
   - title: instagram
-    url: https://www.instagram.com/unnaengenharia/
+    url: 'https://www.instagram.com/unnaengenharia/'
   - title: whatsapp
-    url: https://web.whatsapp.com/send?l=pt&phone=55041984080455
-#  - title: twitter
-#    url: https://twitter.com/SBootstrap
-#  - title: stack-overflow
-#    url: http://stackoverflow.com/questions/tagged/jekyll
-#  - title: bitbucket
-#    url: http://bitbucket.org/jekyll
-#  - title: github
-#    url: https://github.com/IronSummitMedia/startbootstrap
-
+    url: 'https://web.whatsapp.com/send?l=pt&phone=55041984080455'
 team:
   - title: linkedin
-    url: https://www.linkedin.com/in/murilo-albunio-82bb7894/
+    url: 'https://www.linkedin.com/in/murilo-albunio-82bb7894/'
     name: Murilo Albunio
   - title: linkedin
-    url: https://www.linkedin.com/in/emersonbatistaleite/
+    url: 'https://www.linkedin.com/in/emersonbatistaleite/'
     name: Emerson Leite
-
 plugins:
- - jekyll-admin
-
-
-# Build settings
+  - jekyll-admin
 markdown: kramdown
 permalink: pretty
