--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,9 @@ description: >-
   clientes soluções sustentáveis, viabilizando prazos, custos e qualidade.
   Valorizamos o respeito nos relacionamentos profissionais, o desenvolvimento
   científico e a qualidade que deve ser oferecida aos nossos clientes. 
+
+sacre-message:
+  Teste de mensagem.
 lang: pt-br
 author: Emerson Leite
 show-author: true
