--- a/_data/content-set.yml
+++ b/_data/content-set.yml
@@ -3,7 +3,7 @@ download:
   body-set: >-
       Nosso time é composto por profissionais com competências variadas. Somos
       especialistas em gestão de obras, execução de orçamentos, planejamento de
-      empreendimentos e elaboração e gestão de projetos. Conheça nosssa equipe!
+      empreendimentos e elaboração e gestão de projetos. Conheça nossa equipe!
 contact:
   title: Contato
   body-set: >-
