--- a/_data/version.yml
+++ b/_data/version.yml
@@ -11,5 +11,5 @@
   - version: 1.0.t
     date: 2019-05-08
     description: "Versão 0.1 da versão inicial do site da Unna"
-    lastest: true
+    lastest: false
 
