--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,14 @@ email: unna@unna.eng.br
 url: 'https://unna.eng.br'
 baseurl: ''
 description: >-
-  Nosso objetivo é atuar no setor da construção civil, proporcionando aos
-  clientes soluções sustentáveis, viabilizando prazos, custos e qualidade.
-  Valorizamos o respeito nos relacionamentos profissionais, o desenvolvimento
-  científico e a qualidade que deve ser oferecida aos nossos clientes. 
+  h2: Para o cliente final e arquitetos
+  set: Administração e gerenciamento de obras residenciais e comerciais.
+       Planejamento de sua obra desde a fundação até a entrega final.
+
+  h2: Para construtoras
+  set:  Gestão de equipes multidisciplinares para a sua obra. Não se preocupe com orçamentos e contratação de serviços.
+        Fornecimento de equipe para execução de serviços civis, de elétrica, hidráulica e demais necessários para seu empreendimento.
+        Diferencial de outras empresas, pois nossa equipe técnica, composta por engenheiros, acompanha cada etapa do serviço, evitando falhas comuns em outras empresas que fornecem mão de obra terceirizada.
 plugins:
   - jekyll-admin
   - jekyll-sitemap
