--- a/_data/content-set.yml
+++ b/_data/content-set.yml
@@ -1,7 +1,7 @@
 download:
   title: Sobre nós
   body-set: >-
-      Nosso time é composto por profissionais com competências variadas. Somos
+    Nosso time é composto por profissionais com competências variadas. Somos
       especialistas em gestão de obras, execução de orçamentos, planejamento de
       empreendimentos e elaboração e gestão de projetos. Conheça nossa equipe!
 contact:
@@ -18,3 +18,11 @@ footer:
 
 sacre-message:
   body-set: null
+
+intro:
+  title: null
+  body-set: >-
+      Nosso objetivo é atuar no setor da construção civil, proporcionando aos
+      clientes soluções sustentáveis, viabilizando prazos, custos e qualidade.
+      Valorizamos o respeito nos relacionamentos profissionais, o desenvolvimento
+      científico e a qualidade que deve ser oferecida aos nossos clientes.
