--- a/_data/version.yml
+++ b/_data/version.yml
@@ -8,8 +8,8 @@
     description: "Versão 0.1 da versão inicial do site da Unna"
     lastest: false
 
-  - version: 1.0.t
+  - version: 1.0.2
     date: 2019-05-08
     description: "Versão 0.1 da versão inicial do site da Unna"
-    lastest: false
+    lastest: true
 
