--- a/_data/version.yml
+++ b/_data/version.yml
@@ -3,13 +3,10 @@
     description: "Versão inicial do site da Unna"
     lastest: false
 
-  - version: 1.0.1
-    date: 2019-05-08
-    description: "Versão 0.1 da versão inicial do site da Unna"
-    lastest: false
-
-  - version: 1.0.2
-    date: 2019-05-08
-    description: "Versão 0.1 da versão inicial do site da Unna"
+  - version: 1.1.0
+    date: 2019-05-17
+    description: "Criação de espaço para atualizações. Criação de controle de versões. Atualização de conteúdo."
     lastest: true
+
+
 
