--- a/_data/content-set.yml
+++ b/_data/content-set.yml
@@ -7,7 +7,7 @@ download:
 contact:
   title: Contato
   body-set: >-
-      Entre em contato conosco através de nossas redes sociais. Estaremos
+      Entre em contato conosco através do nosso formulário ou das nossas redes sociais. Estaremos
       prontos para atendê-lo da melhor maneira!
 map:
   title: Onde estamos
