--- a/_data/version.yml
+++ b/_data/version.yml
@@ -1,3 +1,8 @@
+  - version: 1.3.0
+    date: 2019-05-20
+    description: "Inserção de formulário de contato da formspree."
+    lastest: true  
+
   - version: 1.2.0
     date: 2019-05-20
     description: "Inserção do Google analytics. Atualização de escopo de serviços."
