--- a/_data/version.yml
+++ b/_data/version.yml
@@ -6,7 +6,7 @@
   - version: 1.2.0
     date: 2019-05-20
     description: "Inserção do Google analytics. Atualização de escopo de serviços."
-    lastest: true   
+    lastest: false  
   
   - version: 1.1.0
     date: 2019-05-17
