--- a/_data/social.yml
+++ b/_data/social.yml
@@ -7,9 +7,9 @@
 - title: instagram
   name: 
   url: 'https://www.instagram.com/unnaengenharia/'
-- title: whatsapp
-  name: 
-  url: 'https://web.whatsapp.com/send?l=pt&phone=55041984080455'
+#- title: whatsapp
+#  name: 
+#  url: 'https://web.whatsapp.com/send?l=pt&phone=55041984080455'
 - title: facebook-messenger
   name: 
   url: 'https://m.me/unnaengenharia/'
